--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -1,12 +1,32 @@
-
-/* 
-
-    You can write your own styles here...
-    
-    
-    ...Or you can use the import command to include 
-    other sylesheets into your bunde as well, e.j:
-    
-    import 'relative/path/to/stylesheet.scss';
-
-*/
+.traffic-light {
+    width: 100px;
+    margin: auto;
+    padding: 20px;
+    background: #333;
+    border-radius: 10px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+  
+  .light {
+    width: 50px;
+    height: 50px;
+    margin: 10px 0;
+    border-radius: 50%;
+    background: #444;
+    transition: background 0.3s;
+  }
+  
+  .light.red.active {
+    background: red;
+  }
+  
+  .light.yellow.active {
+    background: yellow;
+  }
+  
+  .light.green.active {
+    background: green;
+  }
+  
